--- a/app/views/records/edit_fields/_creator.html.erb
+++ b/app/views/records/edit_fields/_creator.html.erb
@@ -8,6 +8,5 @@
 } ,
 required: f.object.required?(key) %>
 
-<%= f.input :authorities, collection: f.object.authorities, prompt: "Select an authority", label: false %>
-
+<%= f.input :creator_authorities, collection: f.object.creator_authorities, prompt: "Select an authority", label: false %>
 
