Restructure for autocomplete fields

--- a/app/views/records/edit_fields/_contributor.html.erb
+++ b/app/views/records/edit_fields/_contributor.html.erb
@@ -8,6 +8,6 @@
 } ,
 required: f.object.required?(key) %>
 
-<%= f.input :authorities, collection: f.object.authorities, prompt: "Select an authority", label: false %>
+<%= f.input :contributor_authorities, collection: f.object.authorities, prompt: "Select an authority", label: false %>
 
 
