--- a/app/views/records/edit_fields/_subject.html.erb
+++ b/app/views/records/edit_fields/_subject.html.erb
@@ -5,9 +5,7 @@
   class: 'form-control',
   data: { 'autocomplete-url' => "/authorities/search/loc/subjects",
 'autocomplete' => key }
-} ,
-required: f.object.required?(key) %>
+} , required: f.object.required?(key) %>
 
-<%= f.input :authorities, collection: f.object.authorities, prompt: "Select an authority", label: false %>
-
+<%= f.input :subject_authorities, collection: f.object.authorities, prompt: "Select an authority", label: false  %>
 
