Switch autocomplete select to creator/contributor from subject
Ignore emacs temp files

Remove custom subject edit field

Moving subject autocomplete funtionality to creator/contributor

creator/contributor

Restructure for autocomplete fields

Added private method to reactivate the autocomplete with chosen fields

--- a/app/views/records/edit_fields/_contributor.html.erb
+++ b/app/views/records/edit_fields/_contributor.html.erb
@@ -8,6 +8,4 @@
 } ,
 required: f.object.required?(key) %>
 
-<%= f.input :contributor_authorities, collection: f.object.authorities, prompt: "Select an authority", label: false %>
-
-
+<%= f.input :contributor_authorities, collection: f.object.contributor_authorities, prompt: "Select an authority", label: false %>
