--- a/app/views/records/edit_fields/_creator.html.erb
+++ b/app/views/records/edit_fields/_creator.html.erb
@@ -1,3 +1,5 @@
+<% name_authorities = Hyrax::NameAuthorities.new %>
+
 <%=
   f.input key,
   as: :multi_value,
@@ -8,5 +10,5 @@
 } ,
 required: f.object.required?(key) %>
 
-<%= f.input :creator_authorities, collection: f.object.creator_authorities, prompt: "Select an authority", label: false %>
+<%= f.input key, collection: name_authorities.select_active_options, label: false %>
 
