This fixes the blank option in the vocab select box

--- a/app/views/records/edit_fields/_creator.html.erb
+++ b/app/views/records/edit_fields/_creator.html.erb
@@ -10,5 +10,4 @@
 } ,
 required: f.object.required?(key) %>
 
-<%= f.input key, collection: name_authorities.select_active_options, label: false %>
-
+<%= f.input key, collection: name_authorities.select_active_options, prompt: "Authority/Vocabulary", label: false %>
