--- a/app/views/records/edit_fields/_creator.html.erb
+++ b/app/views/records/edit_fields/_creator.html.erb
@@ -6,7 +6,7 @@
   input_html: {
   class: 'form-control',
   data: { 'autocomplete-url' => "/authorities/search/loc/names",
-'autocomplete' => key }
+'autocomplete' => key, 'autocomplete-read-only' => 'true' }
 } ,
 required: f.object.required?(key) %>
 
